fix the project sprint and the work_item (#5)
* ci pipeline configuration & test

* ci pipeline configuration & test

* ci pipeline configuration & test

* ci pipeline configuration & test

* ci pipeline configuration & test

* Expose actuator health for ALB

* automated deployement

* automated deployement

* WIP: local changes before merging feature/ziad

---------

Co-authored-by: Manal-Lahmidi <manoula8987@gmail.com>